@@ -1,5 +1,5 @@
 Credits and contributors for driftnet
-$Id: CREDITS,v 1.4 2002/06/01 14:48:46 chris Exp $
+$Id: CREDITS,v 1.5 2002/06/01 15:26:09 chris Exp $
 
 Thanks to the authors of EtherPEG, for a cool idea, and to Eric Richardson,
 whose website brought it to my attention.
@@ -11,3 +11,4 @@ Jamie Zawinski for helpful suggestions and webcollage integration.
 
 Eric Dobbs for fixing some portability issues and getting driftnet running on
 Solaris.
+
