@@ -7,7 +7,7 @@
 .\" Copyright (c) 2002 Chris Lightfoot. All rights reserved.
 .\" Email: chris@ex-parrot.com; WWW: http://www.ex-parrot.com/~chris/
 .\"
-.\" $Id: driftnet.1,v 1.9 2002/06/01 12:58:22 chris Exp $
+.\" $Id: driftnet.1,v 1.10 2002/06/01 15:26:09 chris Exp $
 .\"
 
 .SH NAME
@@ -99,7 +99,7 @@ Chris Lightfoot <chris@ex-parrot.com>
 .SH VERSION
 \fBDriftnet\fP, version 0.1.5pre3.
 .br
-$Id: driftnet.1,v 1.9 2002/06/01 12:58:22 chris Exp $
+$Id: driftnet.1,v 1.10 2002/06/01 15:26:09 chris Exp $
 
 .SH COPYING
 This program is free software; you can redistribute it and/or modify
